<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

 <!-- Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:background="@drawable/panel_top_background"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_oet2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:shadowColor="#7f000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:text="@string/print_address_selecct__main_title"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>
<!-- search -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="77"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
           android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
             android:text="@string/print_address_search_textview"
             android:textSize="18sp"
             android:textStyle="bold" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:ems="10"
            android:gravity="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/button_blue_org"
            android:gravity="center"
            android:text="@string/print_address_search_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        </LinearLayout>

       

    </LinearLayout>

<!-- mapview -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="540"
        android:background="@drawable/print_selecr_point_map_area"
        android:orientation="vertical" >

    </LinearLayout>
<!-- address info -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="128"
        android:background="@drawable/print_selecr_point_map_area"
        android:orientation="vertical" >

    </LinearLayout>
<!-- ok  Button -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="103">

        <Button
            android:id="@+id/button2"
            android:layout_width="230dp"
            android:layout_height="37dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_blue_org"
            android:text="@string/ok_buttton"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

<!-- buttom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="56"
        android:background="@drawable/panel_bottom_background"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>
