<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@color/qin_body_white_smoke"
    android:orientation="vertical" >

    <!-- Title -->

    

<LinearLayout
    android:id="@+id/register_printer_title"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="@integer/qin_header_scale"
    android:background="@color/qin_title_bar_blue"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:shadowColor="#7f000000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="2"
        android:text="@string/register_printer"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

</LinearLayout>
    	
    <!-- Printer Info -->
<ScrollView
          android:id="@+id/scrollView1"
          android:layout_width="match_parent"
          android:layout_height="0dp"
           android:layout_weight="@integer/qin_body_scale"> 
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<include layout="@layout/panel_cut_line_gradient" />

	  <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_marginBottom="4dp"
	      android:layout_marginLeft="60dp"
	      android:layout_marginRight="10dp"
	      android:layout_marginTop="4dp"
	      android:gravity="center"
	      android:text="基本信息："
	      android:textColor="@android:color/black"
	      android:textSize="16sp"
	      android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/register_printer_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/oe_list_background_small"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_register_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:text="@string/oe_wifi_test_Printer_sharp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

          <TextView
              android:id="@+id/textView_register_coord"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="4dp"
              android:layout_marginLeft="15dp"
              android:layout_marginTop="4dp"
              android:text="经纬度：（1323.123,345.78）"
              android:textColor="@android:color/black"
              android:textSize="16sp"
              android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_register_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:text="地理位置:金陵科技学院"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
<include layout="@layout/panel_cut_line_gradient" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="60dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="4dp"
    android:gravity="center"
    android:text="功能信息："
    android:textColor="@android:color/black"
    android:textSize="16sp"
    android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal" >

    	        <TextView
    	            android:layout_width="wrap_content"
    	            android:layout_height="match_parent"
    	            android:layout_marginLeft="15dp"
    	            android:layout_marginRight="10dp"
    	            android:gravity="center"
    	            android:text="打印色彩："
    	            android:textColor="@android:color/black"
    	            android:textSize="16sp"
    	            android:textStyle="bold" />

    	        <RadioGroup
    	            android:id="@+id/radioGroup1"
    	            android:layout_width="wrap_content"
    	            android:layout_height="wrap_content"
    	            android:orientation="horizontal" >

    	            <RadioButton
    	                android:id="@+id/radioButton2"
    	                android:layout_width="wrap_content"
    	                android:layout_height="wrap_content"
    	                android:checked="true"
    	                android:text="彩色"
    	                android:textColor="@android:color/black" />

    	            <RadioButton
    	                android:id="@+id/radioButton1"
    	                android:layout_width="wrap_content"
    	                android:layout_height="wrap_content"
    	                android:layout_marginRight="10dp"
    	                android:text="黑白"
    	                android:textColor="@android:color/black" />
    	        </RadioGroup>
    	    </LinearLayout>
    	    <LinearLayout
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_marginBottom="4dp"
    	        android:orientation="horizontal" >

    	        <TextView
    	            android:layout_width="wrap_content"
    	            android:layout_height="match_parent"
    	            android:layout_marginLeft="15dp"
    	            android:layout_marginRight="10dp"
    	            android:gravity="center"
    	            android:text="双面打印："
    	            android:textColor="@android:color/black"
    	            android:textSize="16sp"
    	            android:textStyle="bold" />

    	        <RadioGroup
    	            android:id="@+id/radioGroup_page_type"
    	            android:layout_width="wrap_content"
    	            android:layout_height="wrap_content"
    	            android:orientation="horizontal" >

    	            <RadioButton
    	                android:id="@+id/radioButton_page_two"
    	                android:layout_width="wrap_content"
    	                android:layout_height="wrap_content"
    	                android:checked="true"
    	                android:text="否"
    	                android:textColor="@android:color/black" />

    	            <RadioButton
    	                android:id="@+id/radioButton_page_one"
    	                android:layout_width="wrap_content"
    	                android:layout_height="wrap_content"
    	                android:layout_marginRight="10dp"
    	                android:text="是"
    	                android:textColor="@android:color/black" />
    	        </RadioGroup>
    	    </LinearLayout>
<LinearLayout
        android:id="@+id/register_printer_input_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="648"
        android:orientation="vertical" >

        <include layout="@layout/panel_cut_line_gradient" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="4dp"
            android:text="@string/register_printer_edit_tips"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="8dp"
            android:background="#7fffffff"
            android:ems="10"
            android:hint="请输入..."
            android:inputType="text"
            android:textColorHint="#238745"
            android:textSize="16sp" >

            <requestFocus />
        </EditText>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <Button
                android:id="@+id/button_register_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_blue_org"
                android:text="注册"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </FrameLayout>
    </LinearLayout>
</LinearLayout>
    </ScrollView> 

<!-- Input Address -->
    <!-- Input Bottom -->
<LinearLayout
    android:id="@id/id_office_envirment_bottom"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="@integer/qin_footer_scale"
    android:background="@color/qin_title_bar_blue"
    android:orientation="vertical" />
   
</LinearLayout>
